--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         
         <a-camera gps-camera rotation-reader></a-camera>
 
-        <a-entity gltf-model="./assets/magnemite/scene.gltf" scale="0.1 0.1 0.1" gps-entity-place="longitude: 90.38462466942237; latitude: 24.58314630690514;"/>
+        <a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.1 0.1 0.1" gps-entity-place="longitude: 90.38462466942237; latitude: 24.58314630690514;" animation-mixer/>
 	</a-scene>
 </body>
