--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
-    <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 24.58314630690514; longitude: 90.38462466942237" scale="10 10 10"></a-entity>
+    <a-entity gltf-model="./assets/magnemite/scene.gltf" gps-new-entity-place="latitude: 24.58314630690514; longitude: 90.38462466942237" scale="0.15 0.15 0.15"></a-entity>
 </a-scene>
 </body>
 </html>
