--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         
         <a-camera gps-camera rotation-reader></a-camera>
 
-        <a-entity gltf-model="./assets/magnemite/scene.gltf" scale="0.45 0.45 0.45" gps-entity-place="longitude: 90.38492507684761; latitude: 24.58312679418704;"/>
+        <a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: 90.38492507684761; latitude: 24.58312679418704;" animation-mixer/>
 	</a-scene>
 </body> 
